microservices/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexturn
  labels:
    name: nexturn
